# codify

./: .gitignore  main.py  pyproject.toml  requirements.txt  test_build.py  test_list_files.py  test_setup.py  test_tavily.py  test_tavily_direct.py  validate_json.py  web_interface.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl
cobol_source/: cobol_csharp_mapping.json
cobol_source/source/: LT2000B.cob
csharp_project/: MyApp.sln
csharp_project/.vector_store/: index.faiss  index.pkl
csharp_project/ConsoleApp/: Program.cs
csharp_project/LT2000B/: Sias.sln
csharp_project/LT2000B/Copies/: Copies.csproj
csharp_project/LT2000B/Dclgens/Dclgens/: FCCONBAN.cs  FCCONBAN_DCLFC_CONTA_BANCARIA.cs  FCHISLOT.cs  FCHISLOT_DCLFC_HIST_LOTERICO.cs  FCLOTERI.cs  FCLOTERI_DCLFC_LOTERICO.cs  FCPENLOT.cs  FCPENLOT_DCLFC_PEND_LOTERICO.cs  FCSEQUEN.cs  FCSEQUEN_DCLFC_SEQUENCE.cs  FCTPENLT.cs  (+14 more)
csharp_project/LT2000B/FileTests.Test/: FileTests.Test.csproj
csharp_project/LT2000B/IA_ConverterCommons/: AppSettings.cs  IA_ConverterCommons.csproj  PIC.cs  Statements.cs  VarBasis.cs
csharp_project/LT2000B/Sias.Loterico/: LotericoController.cs  Program.cs  Sias.Loterico.csproj  appSettings.json
csharp_project/faiss_index/: index.faiss  index.pkl
src/react_agent/: __init__.py  configuration.py  file_registry.py  graph.py  prompts.py  state.py  state_manager.py  tools.py
src/react_agent/tools/: __init__.py  analysis_tools.py  batch_encoding_analyzer.py  build_tools.py  file_tools.py  search_tools.py  vector_tools.py
src/react_agent/utils/: __init__.py  chat_model.py  encoding.py  encoding_handler.py  validators.py
templates/: chat.html  index.html
(+43 files in other folders)
